tests/baselines/reference/importInsideModule.errors.txt
==== tests/cases/compiler/importInsideModule_file2.ts (1 errors) ====
    export module myModule {
        import foo = require("importInsideModule_file1");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! importInsideModule_file2.ts(2,5): error TS2136: Import declarations in an internal module cannot reference an external module.
        var a = foo.x;
    }
==== tests/cases/compiler/importInsideModule_file1.ts (0 errors) ====
    export var x = 1;
    